--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.4.0"
+  },
+  "browser": {
+    "fs": false
   }
 }
