--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-static-fs": "^3.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "feed": "^4.2.0",
