--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -36,6 +36,9 @@ jobs:
     - name: add nojekyll
       run: touch ./out/.nojekyll
 
+    - name: create feed.xml
+      run: node lib/createFeed.js
+
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
