--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build": "next build && mkdir ./out && node ./lib/createFeed.js",
+    "build": "next build",
     "export": "next export",
     "start": "next start"
   },
