--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "2.10.0",
     "feed": "^4.2.0",
     "gray-matter": "4.0.2",
+    "luxon": "^1.24.1",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
